tests/errors/generic_class_generic_parent.vt
class B<T> { v: T; fn init(x: T) { this.v = x; } }
class C<T> extends B<T> { fn init(x: T) { super.init(x); } }
fn main() {}
